feat(docs): create login swagger endpoint
