# api/app/Virtual/Login/Responses/PasswordFieldRequiredResponseVirtual.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Virtual\Login\Responses;
+
+/**
+ * @OA\Schema(
+ *      title="Password Field Required Response",
+ *      description="Response returned when the password field is missing.",
+ *      type="object"
+ * )
+ */
+class PasswordFieldRequiredResponseVirtual
+{
+    /**
+     * @OA\Property(
+     *      title="Message",
+     *      description="Error message",
+     *      example="The password field is required."
+     * )
+     */
+    public string $message;
+
+    /**
+     * @OA\Property(
+     *      title="Errors",
+     *      description="Detailed validation errors",
+     *      @OA\Property(
+     *          property="password",
+     *          type="array",
+     *          @OA\Items(type="string", example="The password field is required.")
+     *      )
+     * )
+     */
+    public object $errors;
+}
